--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
     />
-    <title>Welcome To ProShop</title>
+    <title>Welcome To Drone Shop</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
